Bug 440476 - Can not update stock price manually
Summary: Can not update stock price manually
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-01 06:33 UTC by antoine
Modified: 2021-08-22 07:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments
demo (420.64 KB, image/gif)
2021-08-01 06:33 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2021-08-01 06:33:26 UTC
Created attachment 140435 [details]
demo

SUMMARY

In some situation, it is not possible to update stock price manually

STEPS TO REPRODUCE
1. Right click on a stock > Update manually
2. Erase stock price then enter a new price
3. 

OBSERVED RESULT

Ok button is not active

EXPECTED RESULT

Ok button should be active once the price is entered

SOFTWARE/OS VERSIONS
xubuntu 20.04


ADDITIONAL INFORMATION
see attachment
Comment 1 Jack 2021-08-05 18:36:35 UTC
What view are you in when you do this.  If I'm in the Investments view, on the Equities tab, richt clicking on a stock I can click "Manual price update..." and entering a new price and date and clicking "OK" works fine.  Is there any chance that stock account is closed?
Comment 2 antoine 2021-08-05 19:57:12 UTC
Hi Jack, 

I have this issue in the investement view (=Placements), equities tab.
If you look carefully at my attachement, to reproduce this issue, you
need to 
1. right click on a stock then click on "Manual price update..."
2. erase the price and leave the price field empty
3. click in the date field
4. the Ok button should then be disabled automatically (as expected)
5. you can then enter a new price, the ok button will remain disabled

As a workaround, if you click in the date field after 5, the OK button
is re-enabled

I hope it is more clear now and that you can reproduce this issue.

Thank you for your help,

Antoine
Comment 3 Jack 2021-08-05 20:11:09 UTC
I have not yet tested your exact steps, but it sounds like it depends on the exact order of selecting the various fields.  If that's the case, it would indeed be a real bug, but should be easier to track down.  I'll check in detail later today and report back.
Comment 4 Bug Janitor Service 2021-08-20 04:36:36 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Thomas Baumgart 2021-08-21 14:57:46 UTC
Git commit 4e3c133ad3fe1efb3a9dab8078b9dd662731162e by Thomas Baumgart.
Committed on 21/08/2021 at 14:57.
Pushed by tbaumgart into branch 'master'.

Update button state immediately when edit field content changes

M  +2    -2    kmymoney/dialogs/kcurrencycalculator.cpp

https://invent.kde.org/office/kmymoney/commit/4e3c133ad3fe1efb3a9dab8078b9dd662731162e
Comment 6 Thomas Baumgart 2021-08-22 07:18:30 UTC
Git commit 53e3cbcfb115c88114d2c77718c2952b4a8fbcb6 by Thomas Baumgart.
Committed on 22/08/2021 at 07:18.
Pushed by tbaumgart into branch '5.1'.

Update button state immediately when edit field content changes
FIXED-IN: 5.1.3

(cherry picked from commit 4e3c133ad3fe1efb3a9dab8078b9dd662731162e)

M  +2    -2    kmymoney/dialogs/kcurrencycalculator.cpp

https://invent.kde.org/office/kmymoney/commit/53e3cbcfb115c88114d2c77718c2952b4a8fbcb6