Update button state immediately when edit field content changes

BUG: 440476
FIXED-IN: 5.1.3

(cherry picked from commit 4e3c133ad3fe1efb3a9dab8078b9dd662731162e)